kubernetes/serving/kserve/deepseek-r1-14b/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: deepseek-r1-14b
  labels:
    app.kubernetes.io/name: deepseek-r1-14b
    app.kubernetes.io/part-of: llm-serving
  namespace: llm-serving
spec:
  hosts:
    - "*"
  gateways:
    - knative-serving/knative-ingress-gateway
  http:
    - match:
        - uri:
            prefix: /v1/
      route:
        - destination:
            host: deepseek-r1-14b-predictor.llm-serving.svc.cluster.local
            port:
              number: 80
